--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js" defer></script>
     <title>Magic 8 Ball</title>
 </head>
+
 <body>
-    
+    <!-- <div class="container">
+        <h1>Magic 8 Ball</h1>
+        <div class="circle"></div>
+        <button id="fortuneButton">Ask Me Anything</button>
+        <div id="fortuneReading"></div>
+    </div> -->
+    <div class="ball">
+        <div class="center">
+          <button id="ask-button">Ask Me Anything</button>
+          <div id="fortune"></div> 
+        </div>
+      </div>
 </body>
+
 </html>
